--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <section id="intro">
     <img class="banner-bg-image" src="images/BANNER5.png" usemap="#mapdownload" />
-    <a href="https://www.ludodhamaal.com/download/ludodhamaal.apk">
+    <a href="#">
       <!-- <div style="position: relative;
     margin-top: -152px;
     width: 485px;
@@ -139,7 +139,7 @@
             list-style-type:none;
             color: #fFF;
             font-family: 'Open Sans', sans-serif;">
-            <li>The trend of online gaming is increasing day by day, All the people likes to play online casino gaming instead of land casino. Nantaw is one of the most popular destination for the online casino gaming with wide selection of the Slots, Roulette and Draw games. Just download our app and enjoy the gaming.
+            <li>The trend of online gaming is increasing day by day, All the people likes to play online casino gaming instead of land casino. SoltyClub is one of the most popular destination for the online casino gaming with wide selection of the Slots, Roulette and Draw games. Just download our app and enjoy the gaming.
             </li>
               <!-- <li style="">Download and Login with Solty Club app.
               </li>
