--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
       <!-- end of mobile menu toggle button -->
 
       <div class="collapse navbar-collapse lht" id="navbarsExampleDefault">
+        <ul class="griddisp" style="
+    color: goldenrod;
+    right: 21%;
+    /* bottom: 22%; */
+    font-weight: 600;
+    font-size: 15px;
+    position: absolute;
+    font-family: 'Open Sans';
+">
+          <li class="mgbtm" style="
+    padding-right: 16px;
+">Tournaments</li>
+          <li class="mgbtm" style="
+    padding-right: 16px;
+">Promotions</li>
+          <li class="mgbtm" style="
+    padding-right: 16px;
+">How to Play</li>
+          <li class="mgbtm">Download</li>
+        </ul>
           <ul class="navbar-nav ml-auto" style="font-family: 'Josefin Sans', sans-serif;">
               <li class="nav-item" style="text-transform: uppercase;">
                 <abc>
@@ -95,7 +115,7 @@
 
   <section id="intro">
     <img class="banner-bg-image" src="images/BANNER5.png" usemap="#mapdownload" />
-    <a href="#">
+    <a href="https://www.ludodhamaal.com/download/ludodhamaal.apk">
       <!-- <div style="position: relative;
     margin-top: -152px;
     width: 485px;
@@ -139,7 +159,7 @@
             list-style-type:none;
             color: #fFF;
             font-family: 'Open Sans', sans-serif;">
-            <li>The trend of online gaming is increasing day by day, All the people likes to play online casino gaming instead of land casino. SoltyClub is one of the most popular destination for the online casino gaming with wide selection of the Slots, Roulette and Draw games. Just download our app and enjoy the gaming.
+            <li>The trend of online gaming is increasing day by day, All the people likes to play online casino gaming instead of land casino. Nantaw is one of the most popular destination for the online casino gaming with wide selection of the Slots, Roulette and Draw games. Just download our app and enjoy the gaming.
             </li>
               <!-- <li style="">Download and Login with Solty Club app.
               </li>
@@ -892,7 +912,7 @@
   </div>
   <footer class="text-center">
     <div class="footer-above">
-      <div class="container">
+      <div class="container" style="max-width: 1346px !important;">
         <div class="rowl">
           <div class="footer-col col-md-4">
             <h3 style="margin-left: -12px;">Useful Links</h3>
@@ -902,16 +922,38 @@
                 <a href="#" style="color: #adabad;font-weight: 600;">FAQ</a>
               </li>
               <li>
-                <a href="#" style="color: #adabad;font-weight: 600;">Blog</a>
+                <a href="terms-condition.html" style="color: #adabad;font-weight: 600;">Terms</a>
               </li>
               <li>
-                <a href="#" style="font-weight: 600;color: #adabad;">Terms</a>
+                <a href="contactus.html" style="font-weight: 600;color: #adabad;">Contact Us</a>
               </li>
               <li>
-                <a href="#" style="font-weight: 600;color: #adabad;">Fair Play</a>
+                <a href="#" style="font-weight: 600;color: #adabad;">Tips & Tricks</a>
               </li>
               <li>
-                <a href="#" style="font-weight: 600;color: #adabad;">Tips &amp; Tricks</a>
+                <a href="refer-earn.html" style="font-weight: 600;color: #adabad;">Refer &amp; Earn</a>
+              </li>
+
+            </ul>
+            <ul class=""
+              style="right: -8%;
+              top: 29%;
+              position: absolute;font-family: 'Open Sans', sans-serif;list-style-type: none;text-align: -webkit-left;margin-left: auto;margin-right: auto;padding-bottom: 10px;">
+              
+              <li>
+                <a href="fairplay.html" style="color: #adabad;font-weight: 600;">Fair Play</a>
+              </li>
+              <li>
+                <a href="privacypolicy.html" style="color: #adabad;font-weight: 600;">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="disclaimer.html" style="font-weight: 600;color: #adabad;">Website Disclaimer</a>
+              </li>
+              <li>
+                <a href="responsible.html" style="font-weight: 600;color: #adabad;">Responsible Game</a>
+              </li>
+              <li>
+                <a href="depositwithdraw.html" style="font-weight: 600;color: #adabad;">Deposit &amp; Withdrawal</a>
               </li>
 
             </ul>
