--- a/depositwithdraw.html
+++ b/depositwithdraw.html
@@ -118,6 +118,29 @@
       <div class="section-headerss container" style="text-align: center;margin-bottom: 46px;color:white">
         <h3 style="color: #F2AA4CFF;padding-top: 47px;
         padding-bottom: 10px;">Withdrawal Policy</h3>
+        <p style="text-align: justify; padding-top: 33px; font-family: 'Open Sans', sans-serif;
+        font-weight: 300;">SoltyClub offers instant money withdrawal to all its users. Instant withdrawal allows you to withdraw your winnings via IMPS in just 30 seconds if your bank supports IMPS transfers.</p>
+        <p style="text-align: justify; padding-top: 33px; font-family: 'Open Sans', sans-serif;
+        font-weight: 300;">Your withdrawal will be processed instantly, even on weekends & bank holidays. If your bank does not support IMPS, your withdrawal will be processed via NEFT once a day on bank working days.</p>
+        <p style="text-align: justify; padding-top: 0px; font-family: 'Open Sans', sans-serif;
+        font-weight: 600;color: goldenrod;">Below are the details of the cash withdrawal policy on SoltyClub.</p>
+        <ul style="text-align: justify;
+        font-family: 'Open Sans';list-style-type: none;margin-left: -37px;">
+          <li style="padding-bottom: 8px;">1. You may withdraw your cash game winnings by an electronic ‘bank’ transfer to your verified bank account. Please note that the name on the bank account must match the name on the PAN card.</li>
+          <li style="padding-bottom: 8px;">2. The withdrawal request, along with your bank details, needs to be filled in through your lobby screen on the SoltyClub app/website.</li>
+          <li style="padding-bottom: 8px;">3. You can withdraw your entire withdrawal amount accumulated through your winnings & released bonuses at any point in time. Withdrawal of deposits is not allowed on SoltyClub.</li>
+          <li style="padding-bottom: 8px;">4. All the withdrawal requests made on SoltyClub are free of a judgment laid down minimum withdrawal request per transaction. 100 and the maximum withdrawal request per transaction is Rs. 100,000</li>
+          <li style="padding-bottom: 8px;">5. Check your bank account statement for “CASHFREE” or “RAZORPAY” once your withdrawal is processed. Cashfree and Razorpay are our payment partners for withdrawals.</li>
+          <li style="padding-bottom: 8px;">6. We process your IMPS payment immediately with our payment partners after the withdrawal request is raised successfully & post that bank processes your payment under their stipulated process time. However, in some cases, a delay might occur. IMPS transactions sometimes fail if your bank is conducting maintenance or having downtime when the transaction is initiated. If this happens, the withdrawal may go through later or may get reversed. If your withdrawal status shows ‘Submitted to the bank,’ but you haven’t received the credit, then this is the case. The final status of the transaction is only known after three working days. You don’t need to worry – if the transaction is reversed, the funds will automatically be credited back to your SoltyClub account.</li>
+          <li style="padding-bottom: 8px;">7. Account monitoring is done in suspicious games, multiple accounts, etc., and hence the withdrawal is subjected to clearance. It is important to monitor for responsible play as well as to prevent unauthorized or illegal activity.</li>
+          <li style="padding-bottom: 8px;">8. Please note that any single game (including tournaments) with net winnings (Winnings – wagering) is more than or equal to Rs 10,000 is subject to a TDS of 31%. We will issue a TDS certificate to all PAN verified players before the end of the financial year. Players can use them to file their Income Tax Returns.</li>
+          <li style="padding-bottom: 8px;">9. You cannot withdraw any free referral bonus earned through any promotional offer, which can only be used for playing rummy cash games on SoltyClub.com.</li>
+          <li style="padding-bottom: 8px;">10. In case of any fraudulent activity, management reserves the right to accept or decline your withdrawal request.</li>
+        </ul>
+        <ul style="text-align: justify;list-style-type: none;
+        font-family: 'Open Sans';color: #F2AA4CFF;margin-left: -38px;">
+          <li>We encourage our players to read our Terms of service before they start playing.</li>
+          </ul>
       </div>
   </div>
   <hr style="margin-bottom:0px">
