--- a/responsible.html
+++ b/responsible.html
@@ -534,10 +534,12 @@ $(".navbar-nav li a").on("click", function(event) {
   /* Navbar Scripts */
 	// jQuery to collapse the navbar on scroll
   $(window).on('scroll load', function() {
-		if ($(".navbar").offset().top > 60) {
+    if ($(".navbar").offset().top > 60) {
 			$(".fixed-top").addClass("top-nav-collapse");
+      $(".griddisp").css("bottom","21%");
 		} else {
 			$(".fixed-top").removeClass("top-nav-collapse");
+      $(".griddisp").css("bottom","32%");
 		}
   
     });
