--- a/faq.html
+++ b/faq.html
@@ -506,8 +506,10 @@ $(".navbar-nav li a").on("click", function(event) {
   $(window).on('scroll load', function() {
 		if ($(".navbar").offset().top > 60) {
 			$(".fixed-top").addClass("top-nav-collapse");
+      $(".griddisp").css("bottom","21%");
 		} else {
 			$(".fixed-top").removeClass("top-nav-collapse");
+      $(".griddisp").css("bottom","32%");
 		}
   
     });
