--- a/disclaimer.html
+++ b/disclaimer.html
@@ -65,7 +65,7 @@
       <!-- end of mobile menu toggle button -->
 
       <div class="collapse navbar-collapse lht" id="navbarsExampleDefault">
-        <ul class="griddisp" style="
+        <ul class="griddisp snip1226" style="
     color: goldenrod;
     right: 21%;
     /* bottom: 22%; */
@@ -76,14 +76,14 @@
 ">
           <li class="mgbtm" style="
     padding-right: 16px;
-">Tournaments</li>
+"><a href="#" data-hover="Tournaments">Tournaments</a></li>
           <li class="mgbtm" style="
     padding-right: 16px;
-">Promotions</li>
+"><a href="#" data-hover="Promotions">Promotions</a></li>
           <li class="mgbtm" style="
     padding-right: 16px;
-">How to Play</li>
-          <li class="mgbtm">Download</li>
+"><a href="#" data-hover="How to Play">How to Play</a></li>
+          <li class="mgbtm"><a href="#" data-hover="Download">Download</a></li>
         </ul>
           <ul class="navbar-nav ml-auto" style="font-family: 'Josefin Sans', sans-serif;">
               <li class="nav-item" style="text-transform: uppercase;">
