--- a/tips.html
+++ b/tips.html
@@ -65,26 +65,26 @@
       <!-- end of mobile menu toggle button -->
 
       <div class="collapse navbar-collapse lht" id="navbarsExampleDefault">
-        <ul class="griddisp" style="
-    color: goldenrod;
-    right: 21%;
-    /* bottom: 22%; */
-    font-weight: 600;
-    font-size: 15px;
-    position: absolute;
-    font-family: 'Open Sans';
-">
-          <li class="mgbtm" style="
-    padding-right: 16px;
-">Tournaments</li>
-          <li class="mgbtm" style="
-    padding-right: 16px;
-">Promotions</li>
-          <li class="mgbtm" style="
-    padding-right: 16px;
-">How to Play</li>
-          <li class="mgbtm">Download</li>
-        </ul>
+        <ul class="griddisp snip1226" style="
+        color: goldenrod;
+        right: 21%;
+        /* bottom: 22%; */
+        font-weight: 600;
+        font-size: 15px;
+        position: absolute;
+        font-family: 'Open Sans';
+    ">
+              <li class="mgbtm" style="
+        padding-right: 16px;
+    "><a href="#" data-hover="Tournaments">Tournaments</a></li>
+              <li class="mgbtm" style="
+        padding-right: 16px;
+    "><a href="#" data-hover="Promotions">Promotions</a></li>
+              <li class="mgbtm" style="
+        padding-right: 16px;
+    "><a href="#" data-hover="How to Play">How to Play</a></li>
+              <li class="mgbtm"><a href="#" data-hover="Download">Download</a></li>
+            </ul>
           <ul class="navbar-nav ml-auto" style="font-family: 'Josefin Sans', sans-serif;">
               <li class="nav-item" style="text-transform: uppercase;">
                 <abc>
