--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
             font-size: 36px;text-align: left;font-family: 'Open Sans', sans-serif;">
                       Play Solty Club Games</h2>
 
-            <ul style="font-size: 17px;
+            <ul style="font-size: 17px; 
             margin-left: -7%;
             font-weight: 300;
             text-align: justify;    margin-top: 9%;
             list-style-type:none;
             color: #fFF;
             font-family: 'Open Sans', sans-serif;">
-            <li>The trend of online gaming is increasing day by day, All the people likes to play online casino gaming instead of land casino. Nantaw is one of the most popular destination for the online casino gaming with wide selection of the Slots, Roulette and Draw games. Just download our app and enjoy the gaming.
+            <li>The trend of online gaming is increasing day by day, All the people likes to play online casino gaming instead of land casino. SoltyClub is one of the most popular destination for the online casino gaming with wide selection of the Slots, Roulette and Draw games. Just download our app and enjoy the gaming.
             </li>
               <!-- <li style="">Download and Login with Solty Club app.
               </li>
@@ -767,12 +767,12 @@
                         </div>
                         <div class="sm_title aos-init aos-animate" data-aos="fade-up" data-aos-duration="800" data-aos-offset="10" data-aos-once="true"><a href="">Windows App</a></div>
                     </li>
-                    <li>
+                    <!-- <li>
                         <div class="circle_outer position-relative">
                             <span class="pl_icon macos aos-init aos-animate" data-aos="zoom-in" data-aos-duration="800" data-aos-offset="10" data-aos-once="true"></span>
                         </div>
                         <div class="sm_title aos-init aos-animate" data-aos="fade-up" data-aos-duration="800" data-aos-offset="10" data-aos-once="true"><a href="">Macintosh App</a></div>
-                    </li>
+                    </li> -->
                     <li>
                         <div class="circle_outer position-relative">
                             <span class="pl_icon play aos-init aos-animate" data-aos="zoom-in" data-aos-duration="800" data-aos-offset="10" data-aos-once="true"></span>
@@ -959,8 +959,8 @@
             </ul>
           </div>
           <div class="footer-col col-md-4">
-            <h3>Around the Web</h3>
-            <ul class="list-inline">
+            <!-- <h3>Around the Web</h3> -->
+            <ul class="list-inline" style="padding-bottom: 10%;">
               <li><a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i
                     class="fa fa-fw fa-facebook"></i></a></li>
               <!--<li><a
