--- a/index.html
+++ b/index.html
@@ -978,11 +978,12 @@
           </div>
           <div class="footer-col col-md-4">
             <h3>About Solty Club</h3>
-            <p>
+            <p style="font-weight: 600;
+            font-family: 'Open Sans';">
               Solty Club is the package of 35+ games. Popular with Rummy, Ludo and Teen Patti, user can experience the best game play orientation and graphics. Let's join Solty Club and be a part of smooth game play.
             </p>
           </div>
-          <h5 style="margin-left: -7px;font-family:'Open Sans', sans-serif;font-size: 15px;" class="col-md-4"> © 2021 Solty Club. <br>All Rights Reserved.</h5>
+          <h5 style="margin-left: -7px;font-family:'Open Sans', sans-serif;font-size: 15px;" class="col-md-4"> © 2021 Solty Club All Rights Reserved.</h5>
           <h5 style="margin-left: 0px;font-family: 'Open Sans', sans-serif;font-size: 15px;" class="col-md-4 mbottom">support@soltyclub.com</h5>
         </div>
 
