--- a/responsible.html
+++ b/responsible.html
@@ -332,8 +332,8 @@
             </ul>
           </div>
           <div class="footer-col col-md-4">
-            <h3>Around the Web</h3>
-            <ul class="list-inline">
+            <!-- <h3>Around the Web</h3> -->
+            <ul class="list-inline" style="padding-bottom: 10%;">
               <li><a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i
                     class="fa fa-fw fa-facebook"></i></a></li>
               <!--<li><a
@@ -351,11 +351,12 @@
           </div>
           <div class="footer-col col-md-4">
             <h3>About Solty Club</h3>
-            <p>
+            <p style="font-weight: 600;
+            font-family: 'Open Sans';">
               Solty Club is the package of 35+ games. Popular with Rummy, Ludo and Teen Patti, user can experience the best game play orientation and graphics. Let's join Solty Club and be a part of smooth game play.
             </p>
           </div>
-          <h5 style="margin-left: -7px;font-family:'Open Sans', sans-serif;font-size: 15px;" class="col-md-4"> © 2021 Solty Club. <br>All Rights Reserved.</h5>
+          <h5 style="margin-left: -7px;font-family:'Open Sans', sans-serif;font-size: 15px;" class="col-md-4"> © 2021 Solty Club All Rights Reserved.</h5>
           <h5 style="margin-left: 0px;font-family: 'Open Sans', sans-serif;font-size: 15px;" class="col-md-4 mbottom">support@soltyclub.com</h5>
         </div>
 
