--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
           <!-- <div class="carousel-item">
             <img class="d-block w-100" src="images/ss/2.jpg" alt="Second slide">
           </div> -->
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <img class="d-block w-100" src="images/ss/3.jpg" alt="Third slide">
-          </div>
+          </div> -->
           <div class="carousel-item">
             <img class="d-block w-100" src="images/ss/4.jpg" alt="Third slide">
           </div>
@@ -286,9 +286,9 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="images/ss/7.jpg" alt="Third slide">
           </div>
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <img class="d-block w-100" src="images/ss/8.jpg" alt="Third slide">
-          </div>
+          </div> -->
           <div class="carousel-item">
             <img class="d-block w-100" src="images/ss/9.jpg" alt="Third slide">
           </div>
