--- a/tips.html
+++ b/tips.html
@@ -256,7 +256,7 @@
   <footer class="text-center">
     <div class="footer-above">
       <div class="container" style="max-width: 1346px !important;">
-        <div class="rowl">
+        <div class="rowl" style="margin-left: -9%;">
           <div class="footer-col col-md-4">
             <h3 style="margin-left: -12px;">Useful Links</h3>
             <ul class="col-md-6 wct"
@@ -326,8 +326,8 @@
               Solty Club is the package of 35+ games. Popular with Rummy, Ludo and Teen Patti, user can experience the best game play orientation and graphics. Let's join Solty Club and be a part of smooth game play.
             </p>
           </div>
-          <h5 style="margin-left: -7px;font-family:'Open Sans', sans-serif;font-size: 15px;" class="col-md-4"> © 2021 Solty Club All Rights Reserved.</h5>
-          <h5 style="margin-left: 0px;font-family: 'Open Sans', sans-serif;font-size: 15px;" class="col-md-4 mbottom">support@soltyclub.com</h5>
+          <h5 style="margin-left: 47px;font-family:'Open Sans', sans-serif;font-size: 14px;" class="col-md-4 mllft"> © 2021 Solty Club All Rights Reserved.</h5>
+          <h5 style="margin-left: -42px;font-family: 'Open Sans', sans-serif;font-size: 14px;" class="col-md-4 mbottom mllft">support@soltyclub.com</h5>
         </div>
 
       </div>
