--- a/depositwithdraw.html
+++ b/depositwithdraw.html
@@ -148,24 +148,27 @@
   <hr style="margin-top:0px;margin-bottom: 0px;">
 
 
-  <hr style="margin-top:0px;margin-bottom: 0px;">
+  <!-- <hr style="margin-top:0px;margin-bottom: 0px;"> -->
 
 <div class="dwnload_app" style="background: #232323;">
   <div class="container">
          <div class="row justify-content-between pad_nl dwnload_app ">
     <div class="col-md-3 align-self-center">
-          <div class="fot_title p-0">Download App</div>
+      <div class="fot_title p-0 mllft" style="font-family: 'Open Sans';
+      font-weight: 400;
+      font-size: 24px;
+      margin-left: -17%;">Download App</div>
     </div>
 
     <ul class="app_outer d-flex ">
       <li>
-                      <a href="#"><span class="app_one ap_two"></span></a>
+                      <a href="#"><span class=""><img src="images/google-play-badge.png" style="width: 123px;" ></span></a>
                     </li>
       <li>
-                      <a href="#"><span class="app_one ap_one"></span></a>
+                      <a href="#"><span class=""><img src="images/windows-badge.png" style="width: 123px;" ></span></a>
                     </li>
        <li>
-                      <a href="#"><span class="app_one ap_three"></span></a>
+                      <a href="#"><span class=""><img src="images/app-store-badge.png" style="width: 123px;" ></span></a>
                     </li>
     </ul>
 </div>
@@ -345,7 +348,7 @@
           <div class="footer-col col-md-4">
             <h3>About Solty Club</h3>
             <p style="font-weight: 600;
-            font-family: 'Open Sans';">
+            font-family: 'Open Sans';font-size: 1rem;">
               Solty Club is the package of 35+ games. Popular with Rummy, Ludo and Teen Patti, user can experience the best game play orientation and graphics. Let's join Solty Club and be a part of smooth game play.
             </p>
           </div>
