--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                 </div>
             </div>
             <div class="col-md-12" style="margin-top: -2%;">
-                <ul class="pltf_outer d-flex">
+                <ul class="pltf_outer d-flex" style="padding-left: 0;">
                     <li>
                         <div class="circle_outer position-relative">
                             <span class="pl_icon android aos-init aos-animate" data-aos="zoom-in" data-aos-duration="800" data-aos-offset="10" data-aos-once="true"></span>
