--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
     </section>
 
   </div>
-  <section class="platforms plnew" style="background-image: url(./images/download.jpg);
+  <section class="platforms plnew" style="background-image: url(./images/bg2.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
